# tg-data-collector

./: .gitignore  Constants.py  DataProcessor.py  LICENSE  Main.py  README.md  example_extract  fix_edge_properties.py  get_graphs_from_dataframes.py  groups_manual_dl.py  merge_standard_graphs.py  process_group.py  pyproject.toml  scrape_error_2312  utils.py
graph_analysis/: onemode.py  static_descriptive.py  twomode_descriptive.py
processing/: create_graphs.py  delete_without_msg.py  extract_hints.py  join_dfs.py
scraping/: process_group.py
tests/: appending_df.py
