[tool.poetry]
name = "tg-data-collector"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Telethon = "^1.18.2"
pandas = "^1.1.5"
networkx = "^2.5"
beautifulsoup4 = "^4.9.3"
matplotlib = "^3.3.3"
scipy = "^1.5.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
